[project]
name = "BradleysStrings"
version = "0.0.1"
authors = [
  { name="Bradley Hu", email="bradleyhu0707@gmail.com" },
  { name="Jayden Yin", email="technodragon555@gmail.com"}
]
description = "Morer stuff for dealing with strings!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]
license = "GNU"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/bradley-dev777/BradleysStrings-python/"
Issues = "https://github.com/bradley-dev777/BradleysStrings-python/issues"
